initial testing on cap'n proto

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,8 @@ CC = gcc #gcc
 CCFLAGS = -g -std=c++11 -I${USER_INCLUDE} -L${USER_LIB} -DPF_INET -DBIG_MSG -DSOCKET_CACHE -DSCCB -DTSQUEUE
 #CCFLAGS = -g -I${USER_INCLUDE} -L${USER_LIB} -DTHREADED_SERVE -DPF_INET -DBIG_MSG -DSOCKET_CACHE -DSCCB -DTSQUEUE 
 MPIFLAGS = -g -I${USER_INCLUDE} -L${USER_LIB} -DMPI_INET
-LIBFLAGS = -lstdc++ -lrt -lpthread -lm -lc -lprotobuf -lprotobuf-c
+LIBFLAGS = -lstdc++ -lrt -lpthread -lm -lc -lprotobuf -lprotobuf-c  -lcapnp -lkj
+#LIBFLAGS = -lstdc++ -lrt -lpthread -lm -lc -lprotobuf -lprotobuf-c # old
 MPILIBFLAGS = -lprotobuf -lpthread
 COMMON = common/
 
@@ -54,7 +55,7 @@ zht_ben: benchmark_client.o lock_guard.o cpp_zhtclient.o   lru_cache.o   zpack.p
 Const.o ConfHandler.o ConfEntry.o \
 ProxyStubFactory.o proxy_stub.o ip_proxy_stub.o mq_proxy_stub.o ipc_plus.o tcp_proxy_stub.o udp_proxy_stub.o \
 ZHTUtil.o Env.o Util.o \
-HTWorker.o StrTokenizer.o TSafeQueue.o
+HTWorker.o StrTokenizer.o TSafeQueue.o zht_evo.capnp.o
 	$(CC) $(CCFLAGS) -o $@ $^ $(LIBFLAGS)
 
 
@@ -62,7 +63,7 @@ zhtserver: ZHTServer.o lock_guard.o   lru_cache.o   zpack.pb.o novoht.o bigdata_
 Const.o ConfHandler.o ConfEntry.o \
 ProxyStubFactory.o proxy_stub.o ip_proxy_stub.o mq_proxy_stub.o ipc_plus.o tcp_proxy_stub.o udp_proxy_stub.o \
 ZHTUtil.o Env.o Util.o StrTokenizer.o\
-EpollServer.o ZProcessor.o ip_server.o HTWorker.o StrTokenizer.o TSafeQueue.o
+EpollServer.o ZProcessor.o ip_server.o HTWorker.o StrTokenizer.o TSafeQueue.o zht_evo.capnp.o
 	$(CC) $(CCFLAGS) -o $@ $^ $(LIBFLAGS)
 
 
@@ -79,6 +80,8 @@ libzht.a:
 %.o: %.cc
 	$(CC) $(CCFLAGS) -c $^ $(LIBFLAGS)
 
+%.o: %.c++
+	$(CC) $(CCFLAGS) -c $^ $(LIBFLAGS)
 
 .PHONY:	clean
 
